--- a/aDVancePOS.Desktop/MVP/Vistas/Principal/VistaPrincipal.resx
+++ b/aDVancePOS.Desktop/MVP/Vistas/Principal/VistaPrincipal.resx
@@ -117,12 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="formatoBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>70</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -151,14 +145,15 @@
   </data>
   <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAY9JREFUWEft
-        lT1Ow0AQhVNTcIBIeHff5hhwCqAAiR4kKhq4AB0Fh+CnAmV3ERLiAhR0XAAQ0KQIDRQUgNYKaP3GlmLs
-        VPhJXzHRzHvjcZT0ep06lSgAmQfOPDDywFdDRg44d9YOOKdUMdwBryVGjYieQ2sXOE8oANfJ4MOEqjoy
-        9sbcBuCmDOq/4jwhD7xPmu+DUusRDzyW1LlpUGrHa71WBfW/cZ5Qsm0aGJ+C6zoL/PZznhCdl0/OdWQc
-        gLsquJ/zhMi8dThPiAfahvOE+B22DecJ8UDbcJ4QD9Rk12l9GAnWHjitN7mH84R4YFqC1nse+Cy8c2uf
-        uI/zhHiggDEbVXV8av7C5bS1QABOQ/yP+PkMOEnrmS4QjPEFQ65nuUAAjlPDeIm0dsZs5wsYcyTC21jA
-        AR/CtA5NFxCGdekWqLuAy7LVdMABL8J0Wqx9Tr1Clq1wntCFMUuFBbTeGhqz/xf4pzhk2SLnCV0OBvNe
-        qWU+XWOUWg79/hznlSo2xm3jyYRRTaJH7jVteKd/p2+B7piJNfdeNwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAahJREFUWEft
+        kz1Ow0AQhRc4ACdIdmZSIVFQQcWfRA+iQ0SiDFTQQQESEoKOcI9I+dl1KPm7AOIQQAcFgg4IsuOY8OwE
+        xxghIT/pKzI78+bZ3iiVKRPIEq38JrgvJBxIG9wXEg64GOaiYT4wROtwtu3z2Uu04fUyF9EneQCimhVp
+        2ULhtlNziHasyLtHVwgjcu/1ElXRJ3EAK1L3A9zFDeCFRp+kAf78E6QJ7gsJB9IG94WEAz5lK/JkmS+6
+        aiXvTrQvZimoM1+6vY7IcYRPsgBG5Ny7hCLPQY3oyK+1GsyHnboj8uL/C87QJ3GAOtGWYb6yIuUgQPti
+        GsvcMFqvdvWfuG/BEdlEn1gBHKIlHEqRRdwXUp1oImIwFWq53DjuC6mi1EidaA6Hf4rRen5fqWHc11NV
+        Zt0gmjJa735LPr9mtF72+XLmME+eMmul1BDuiKXOTe+H0XoveFo4Q7+BhYZRZAGyAP8+wBuaIn0CvKLf
+        wLIiN7gQ6RmA+Rr9BpYlmrUij7g0RoCHJvM0+iVSRWTUDdIQWYiiqfWYI5J3cX8b5hl3Bn0yRekDIIIV
+        jjgYKqUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="fieldTitulo.Text" xml:space="preserve">
@@ -192,7 +187,7 @@
 &lt;/head&gt;
 &lt;body&gt;
     &lt;div class="logo"&gt;
-        &lt;span class="advance"&gt;a&lt;/span&gt;&lt;span class="dv"&gt;DV&lt;/span&gt;&lt;span class="advance"&gt;ance&lt;/span&gt; &lt;span class="erp"&gt;ERP&lt;/span&gt; &lt;/span
+        &lt;span class="advance"&gt;a&lt;/span&gt;&lt;span class="dv"&gt;DV&lt;/span&gt;&lt;span class="advance"&gt;ance&lt;/span&gt; &lt;span class="erp"&gt;POS&lt;/span&gt; &lt;/span
     &lt;/div&gt;
 &lt;/body&gt;
 &lt;/html&gt;</value>
@@ -209,101 +204,9 @@
         6FKmoqL/70f2qfwDRi1zTs1XFnEAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABwcqhsgILNQICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgIK9QHR2xGgAAAAAAAAAAAAAAAAAAAAAgIK9QICCyWSIisrUiIrPIIiKzyCIi
-        s8giIrPIIiKzyCIis8giIrK1ICCyWSAgsk8AAAAAAAAAAAAAAAAAAAAAICCyWSAgslkiIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yAgslkgILJZAAAAAAAAAAAAAAAAAAAAACAgslkgILJZISGy/CIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8gILJZICCyWQAAAAAAAAAAAAAAAAAAAAAgILJZICCyWSEh
-        sqgiIrL/ISGyqSIisv8hIbBeIiKyzSIisv8iIrL/ICCyWSAgslkAAAAAAAAAAAAAAAAAAAAAICCyWSAg
-        slkgILJZICCzkCAgslkgILOQICCyWSIis8giIrL/IiKy/yAgslkgILJZAAAAAAAAAAAAAAAAAAAAACAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILOQIiKz0yEhsbggILJZICCyWQAAAAAAAAAAAAAAAAAA
-        AAAgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkAAAAAAAAAAAAA
-        AAAAAAAAIiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/AAAAAAAA
-        AAAAAAAAAAAAACIisv8jI7LHIiKzyCMjssciIrPIIiKy/yEhsqMgILGQICCxkCAgsZAiIrPIIiKy/wAA
-        AAAAAAAAAAAAAAAAAAAiIrLrIiKxyCIisskiIrHIIiKyySIisv8gILKfISGwhSEhsIUhIbCFIiKyySIi
-        sekAAAAAAAAAAAAAAAAAAAAAIiKxUiIiseIiIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yEh
-        suEjI7NQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAA//8AAPAPAADwDwAA8A8AAPCPAAD6jwAA/48AAP//
-        AADAAwAAwAMAAMADAADgBwAA//8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoa
-        swoeHrM8Hh6zVCAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkeHrNUHh6zPBoaswoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAkJLYOHx+yUyAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZHx+yUxoaswoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAACEhtD0gILJZICCyWSAgslkgILFpISGwhSEhsIUhIbCFISGwhSEhsIUhIbCFISGwhSEh
-        sIUhIbCFISGwhSEhsIUhIbCFISGwhSEhsIUgILFoICCyWSAgslkgILJZHh6zPAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAHh6xVSAgslkgILJZICCyWSIiseYiIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yMjsuUgILJZICCyWSAgslkeHrNUAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgILJZICCyWSAgslkgILJZIiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yAgslkgILJZICCyWSAg
-        slkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAgslkgILJZICCyWSAgslkiIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/ICCyWSAg
-        slkgILJZICCyWQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAICCyWSAgslkgILJZICCyWSIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8gILJZICCyWSAgslkgILJZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgILJZICCyWSAg
-        slkgILJZIiKx+iIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yAgslkgILJZICCyWSAgslkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAg
-        slkgILJZICCyWSAgslkiIrOlIiKy/yIisv8iIrL/IiKzpyIisv8iIrL/IiKy/yEhsWwgILJZISGxpCIi
-        sv8iIrL/IiKy/yIisv8iIrL/ICCyWSAgslkgILJZICCyWQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAICCyWSAgslkgILJZICCyWSAgslkhIbOyIiKy/yIisv8gILJZISGysiIisv8iIrL/ICCyWSAg
-        slkgILGQIiKy/yIisv8iIrL/IiKy/yIisv8gILJZICCyWSAgslkgILJZAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAgILJZICCyWSAgslkgILJZICCyWSAgslkiIrOnIiKz8CAgslkgILJZIiKypiIi
-        s/AgILJZICCyWSAgsZAiIrL/IiKy/yIisv8iIrL/IiKy/yAgslkgILJZICCyWSAgslkAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkhIbJdICCyWSAg
-        slkgILJZISGyXSAgslkgILJZICCxkCIisv8iIrL/IiKy/yIisv8iIrL/ICCyWSAgslkgILJZICCyWQAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILN4IiKy/iIisv8iIrL/IiKy/yMjsuQgILJZICCyWSAg
-        slkgILJZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJ3ICCxkCAgsZAjI7OMICCxaCAg
-        slkgILJZICCyWSAgslkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWSAg
-        slkgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAiIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAACIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/wAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAIiKy/yIisv8iIrL/IiKy4SIisuEiIrL/IiKy/yIisuEiIrLhIiKy/yIi
-        sv8iIrL/IiKy7yIis9MiIrPTIiKz0yIis9MiIrPTIiKz0yIis9MiIrLhIiKy/yIisv8iIrL/AAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiIrL/IiKy/yIisuAfH7NaHx+zWiIisuEiIrLgHx+zWh8f
-        s1oiIrLhIiKy/yIisv8fH7NyICCyWSAgslkgILJZICCyWSAgslkgILJZICCyWR8fs1oiIrLhIiKy/yIi
-        sv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIisvYiIrL/IiKy4B8fs1ofH7NaIiKy4iIi
-        suAfH7NaHx+zWiIisuIiIrL/IiKy/x8fs3IgILJZICCyWSAgslkgILJZICCyWSAgslkgILJZHx+zWiIi
-        suIiIrL/IiKy9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIiKzuyIisv8iIrL/IiKy4SIi
-        suEiIrL/IiKy/yIisuEiIrLhIiKy/yIisv8iIrL/IiKy7yEhsswiIrPIIiKzyCIis8giIrPIIiKzyCIi
-        s8giIrLhIiKy/yIisv8iIrK5AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiIrMeIiKx8CIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKx8CMjsB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAiIrMeIiKyrSIisusiIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIisv8iIrL/IiKy/yIi
-        sv8iIrL/IiKy/yIisv8iIrL/IiKy6yIisa4jI7EkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP////////////////////////////////+AAf//AAD//wAA//8A
-        AP//AAD//wAA//8AwP//iMD//8zA////wP///+D////x////////////8AAAD/AAAA/wAAAP8Zj/j/GY
-        /4/wAAAP+AAAH/wAAD//////////////////////
-</value>
-  </data>
+  <metadata name="formatoBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="notificacionMensajes.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>138, 17</value>
   </metadata>
